# CosmosQuant

./: CHANGELOG.md  DISCLAIMER.md  README.md  pyproject.toml
cosmosquant/: __init__.py
cosmosquant/cosmosquant/: __init__.py
cosmosquant/cosmosquant/brokers/: __init__.py  base.py  ib_broker.py  sim_broker.py
cosmosquant/cosmosquant/datasources/: __init__.py  base.py  parquet_source.py
cosmosquant/cosmosquant/engine/: __init__.py  trading_engine.py
cosmosquant/cosmosquant/strategies/: __init__.py  base.py
cosmosquant/cosmosquant/utils/: __init__.py  data.py  performance.py
cosmosquant/datas/: AAPL_2023.parquet
cosmosquant/examples/: run_backtest.py  simple_strategies.py
datas/: README.md
docs/: README.md
examples/: README.md
tests/: README.md  conftest.py  test_sim_broker.py
