[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmosquant"
version = "0.1.0"
description = "A minimal trading engine for backtesting and live trading"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "CosmosQuant", email = "contact@cosmosquant.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry", 
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0", 
    "pyarrow>=12.0.0",
    "ib-insync>=0.9.86",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/CosmosQuant/CosmosQuant"
Repository = "https://github.com/CosmosQuant/CosmosQuant"
Issues = "https://github.com/CosmosQuant/CosmosQuant/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cosmosquant*"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]