[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmosquant"
version = "0.1.0"
description = "A comprehensive quantitative trading framework"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "CosmosQuant", email = "info@cosmosquant.com"}
]
maintainers = [
    {name = "CosmosQuant", email = "info@cosmosquant.com"}
]
keywords = ["trading", "quantitative", "finance", "algorithmic", "backtesting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
    "mypy>=0.900",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Homepage = "https://github.com/CosmosQuant/CosmosQuant"
Repository = "https://github.com/CosmosQuant/CosmosQuant"
Documentation = "https://github.com/CosmosQuant/CosmosQuant/docs"
"Bug Tracker" = "https://github.com/CosmosQuant/CosmosQuant/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cosmosquant*"]

[tool.setuptools.package-dir]
"" = "."

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=cosmosquant --cov-report=html --cov-report=term-missing"